--- a/templates/batallas/show.html.twig
+++ b/templates/batallas/show.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
     <h1>Batallas</h1>
+        <h2 style="color: red;">La fuerza de tu pokemon es igual al nivel por la fuerza pero no se ve en pantalla</h2>
+
+    
 
  <p>Pokemon contrario</p>
   <p>{{pokemonEne.nombre}}</p>
